@@ -12,9 +12,15 @@ import com.powsybl.computation.CommandExecution;
 import com.powsybl.computation.InputFile;
 import com.powsybl.contingency.ContingenciesProvider;
 import com.powsybl.iidm.network.Network;
+import com.powsybl.metrix.integration.configuration.MetrixConfig;
+import com.powsybl.metrix.integration.configuration.MetrixParameters;
 import com.powsybl.metrix.integration.dataGenerator.MetrixInputData;
 import com.powsybl.metrix.integration.dataGenerator.MetrixInputDataGenerator;
-import com.powsybl.metrix.integration.metrix.MetrixChunkParam;
+import com.powsybl.metrix.integration.chunk.MetrixChunkParam;
+import com.powsybl.metrix.integration.network.MetrixNetwork;
+import com.powsybl.metrix.integration.network.MetrixVariantProvider;
+import com.powsybl.metrix.integration.network.MetrixVariantReader;
+import com.powsybl.metrix.integration.network.MetrixVariantsWriter;
 import com.powsybl.timeseries.TimeSeriesIndex;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
@@ -33,6 +39,7 @@ import java.util.function.Supplier;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 
 /**
  * @author Valentin Berthault {@literal <valentin.berthault at rte-france.com>}
@@ -42,7 +49,7 @@ class MetrixInputDataGeneratorTest {
     private List<String> results;
 
     @BeforeEach
-    public void initMetrixInputDataGenerator() {
+    void initMetrixInputDataGenerator() {
         //GIVEN
         results = new ArrayList<>();
         gen = new MetrixInputDataGeneratorBuilder().conf(metrixConfig())
@@ -59,7 +66,8 @@ class MetrixInputDataGeneratorTest {
         method.setAccessible(true); // Allow to access private method
 
         //THEN
-        List<String> args = (List<String>) method.invoke(gen, variants, true, true);
+        Object args = method.invoke(gen, variants, true, true);
+        assertInstanceOf(List.class, args);
         assertEquals(List.of("logs.txt", "variantes.csv", "result", "2", "4", "--log-level=info", "--write-PTDF", "--write-LODF"), args);
     }
 
@@ -83,40 +91,28 @@ class MetrixInputDataGeneratorTest {
 
         // THEN
         Assertions.assertThat(actual).hasSize(1);
-        Assertions.assertThat(actual.get(0).getName(0)).isEqualTo("METRIXb.dic");
+        Assertions.assertThat(actual.getFirst().getName(0)).isEqualTo("METRIXb.dic");
         Assertions.assertThat(results).hasSize(1);
         String fSep = FileSystems.getDefault().getSeparator();
-        Assertions.assertThat(results.get(0)).isEqualTo("METRIXb.dic->" + fSep + "testOut" + fSep + "METRIXb.dic");
+        Assertions.assertThat(results.getFirst()).isEqualTo("METRIXb.dic->" + fSep + "testOut" + fSep + "METRIXb.dic");
     }
 
     @Test
     void generateInputFileZipDoNotWriteFile() throws IOException {
-        Path remedialActionFile = null;
-        MetrixVariantProvider variantProvider = null;
-        Network network = null;
-        ContingenciesProvider contingenciesProvider = null;
-        MetrixParameters parameters = null;
-        MetrixDslData metrixDslData = null;
-
         //WHEN
-        gen.generateInputFileZip(remedialActionFile, variantProvider, network, contingenciesProvider, parameters, metrixDslData);
+        gen.generateInputFileZip(null, null, null, null, null, null);
 
         //THEN
         Assertions.assertThat(results).isEmpty();
     }
 
     @Test
-    void generateInputFileZipDoNotCopyAdditionnalFiles() throws IOException {
+    void generateInputFileZipDoNotCopyAdditionalFiles() throws IOException {
         //GIVEN
         Path remedialActionFile = Paths.get("remedialActionFile");
-        MetrixVariantProvider variantProvider = null;
-        Network network = null;
-        ContingenciesProvider contingenciesProvider = null;
-        MetrixParameters parameters = null;
-        MetrixDslData metrixDslData = null;
 
         //WHEN
-        gen.generateInputFileZip(remedialActionFile, variantProvider, network, contingenciesProvider, parameters, metrixDslData);
+        gen.generateInputFileZip(remedialActionFile, null, null, null, null, null);
 
         //THEN
         Assertions.assertThat(results).isEmpty();
@@ -131,7 +127,6 @@ class MetrixInputDataGeneratorTest {
                 .writeVariantsInLogger((variants, writer, variantRange) -> results.add(variants.firstVariant() + " " + variants.lastVariant()))
                 .create();
 
-        Path remedialActionFile = null;
         MetrixVariantProvider variantProvider = new MetrixVariantProvider() {
             @Override
             public Range<Integer> getVariantRange() {
@@ -153,13 +148,9 @@ class MetrixInputDataGeneratorTest {
                 // Nothing to do here
             }
         };
-        Network network = null;
-        ContingenciesProvider contingenciesProvider = null;
-        MetrixParameters parameters = null;
-        MetrixDslData metrixDslData = null;
 
         //WHEN
-        gen.generateInputFileZip(remedialActionFile, variantProvider, network, contingenciesProvider, parameters, metrixDslData);
+        gen.generateInputFileZip(null, variantProvider, null, null, null, null);
 
         //THEN
         Assertions.assertThat(results).containsExactly("1 3");
@@ -180,15 +171,8 @@ class MetrixInputDataGeneratorTest {
                 })
                 .create();
 
-        Path remedialActionFile = null;
-        MetrixVariantProvider variantProvider = null;
-        Network network = null;
-        ContingenciesProvider contingenciesProvider = null;
-        MetrixParameters parameters = null;
-        MetrixDslData metrixDslData = null;
-
         //WHEN
-        gen.generateInputFileZip(remedialActionFile, variantProvider, network, contingenciesProvider, parameters, metrixDslData);
+        gen.generateInputFileZip(null, null, null, null, null, null);
 
         //THEN
         Assertions.assertThat(results).containsExactly("ok");
@@ -197,23 +181,19 @@ class MetrixInputDataGeneratorTest {
     @Test
     void generateMetrixInputDataSimpleCommand() throws IOException {
         //GIVEN
-        MetrixVariantProvider variantProvider = null;
-        Network network = null;
-        MetrixParameters parameters = null;
-        MetrixDslData metrixDslData = null;
         MetrixChunkParam metrixChunkParam = new MetrixChunkParam.MetrixChunkParamBuilder().simpleInit(0,
             false, false, null, null,
             null, null,
             null).build();
 
         //WHEN
-        List<CommandExecution> commands = gen.generateMetrixInputData(variantProvider, network, parameters, metrixDslData, metrixChunkParam);
+        List<CommandExecution> commands = gen.generateMetrixInputData(null, null, null, null, metrixChunkParam);
 
         //THEN
         Assertions.assertThat(commands).hasSize(1);
-        Assertions.assertThat(commands.get(0).getCommand().getInputFiles()).hasSize(2);
-        Assertions.assertThat(commands.get(0).getCommand().getOutputFiles()).hasSize(2);
-        Assertions.assertThat(commands.get(0).getCommand().getId()).isEqualTo("metrix");
+        Assertions.assertThat(commands.getFirst().getCommand().getInputFiles()).hasSize(2);
+        Assertions.assertThat(commands.getFirst().getCommand().getOutputFiles()).hasSize(2);
+        Assertions.assertThat(commands.getFirst().getCommand().getId()).isEqualTo("metrix");
     }
 
     @Test
@@ -246,22 +226,19 @@ class MetrixInputDataGeneratorTest {
                 // Nothing to do here
             }
         };
-        Network network = null;
-        MetrixParameters parameters = null;
-        MetrixDslData metrixDslData = null;
         MetrixChunkParam metrixChunkParam = new MetrixChunkParam.MetrixChunkParamBuilder().simpleInit(0,
             false, false, null, null,
             null, null,
             null).build();
 
         //WHEN
-        List<CommandExecution> commands = gen.generateMetrixInputData(variantProvider, network, parameters, metrixDslData, metrixChunkParam);
+        List<CommandExecution> commands = gen.generateMetrixInputData(variantProvider, null, null, null, metrixChunkParam);
 
         //THEN
         Assertions.assertThat(commands).hasSize(1);
-        Assertions.assertThat(commands.get(0).getCommand().getInputFiles()).hasSize(2);
-        Assertions.assertThat(commands.get(0).getCommand().getOutputFiles()).hasSize(6);
-        Assertions.assertThat(commands.get(0).getCommand().getId()).isEqualTo("metrix");
+        Assertions.assertThat(commands.getFirst().getCommand().getInputFiles()).hasSize(2);
+        Assertions.assertThat(commands.getFirst().getCommand().getOutputFiles()).hasSize(6);
+        Assertions.assertThat(commands.getFirst().getCommand().getId()).isEqualTo("metrix");
     }
 
     private MetrixInputDataGenerator.FileSystemUtils fileSystem() {
