@@ -7,17 +7,32 @@
  */
 package com.powsybl.metrix.mapping;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Range;
 import com.powsybl.iidm.network.Identifiable;
 import com.powsybl.iidm.network.Network;
-import com.powsybl.timeseries.*;
+import com.powsybl.metrix.commons.MappingVariable;
+import com.powsybl.metrix.commons.observer.DefaultTimeSeriesMapperObserver;
+import com.powsybl.metrix.commons.observer.TimeSeriesMapperObserver;
+import com.powsybl.metrix.mapping.config.TimeSeriesMappingConfig;
+import com.powsybl.metrix.mapping.config.TimeSeriesMappingConfigLoader;
+import com.powsybl.metrix.mapping.config.TimeSeriesMappingConfigTableLoader;
+import com.powsybl.metrix.mapping.exception.TimeSeriesMappingException;
+import com.powsybl.metrix.mapping.references.NumberDistributionKey;
+import com.powsybl.metrix.mapping.utils.MappingTestNetwork;
+import com.powsybl.timeseries.ReadOnlyTimeSeriesStore;
+import com.powsybl.timeseries.ReadOnlyTimeSeriesStoreCache;
+import com.powsybl.timeseries.RegularTimeSeriesIndex;
+import com.powsybl.timeseries.TimeSeries;
+import com.powsybl.timeseries.TimeSeriesException;
+import com.powsybl.timeseries.TimeSeriesFilter;
+import com.powsybl.timeseries.TimeSeriesIndex;
 import com.powsybl.timeseries.ast.FloatNodeCalc;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.threeten.extra.Interval;
 
 import java.io.BufferedWriter;
+import java.io.ByteArrayInputStream;
 import java.io.StringWriter;
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
@@ -25,10 +40,13 @@ import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.TreeSet;
 
-import static com.powsybl.metrix.mapping.AbstractCompareTxt.compareStreamTxt;
-import static org.junit.jupiter.api.Assertions.*;
+import static com.powsybl.commons.test.ComparisonUtils.assertTxtEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * @author Paul Bui-Quang {@literal <paul.buiquang at rte-france.com>}
@@ -40,7 +58,7 @@ class TimeSeriesMapperTest {
     private final MappingParameters mappingParameters = MappingParameters.load();
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         // create test network
         network = MappingTestNetwork.create();
     }
@@ -68,7 +86,7 @@ class TimeSeriesMapperTest {
         TimeSeriesMapper mapper = new TimeSeriesMapper(mappingConfig, parameters, network, logger);
 
         // Observer
-        List<TimeSeriesMapperObserver> observersList = ImmutableList.of(new DefaultTimeSeriesMapperObserver());
+        List<TimeSeriesMapperObserver> observersList = List.of(new DefaultTimeSeriesMapperObserver());
 
         // When not ignoring empty filters
         TimeSeriesMappingException exception = assertThrows(TimeSeriesMappingException.class, () -> mapper.mapToNetwork(store, observersList));
@@ -85,7 +103,7 @@ class TimeSeriesMapperTest {
         try (BufferedWriter bufferedWriter = new BufferedWriter(writer)) {
             logger.writeCsv(bufferedWriter, ZoneId.of("UTC"));
             bufferedWriter.flush();
-            assertNotNull(compareStreamTxt(writer.toString().getBytes(StandardCharsets.UTF_8), "/expected/", "nonIgnoredEmptyFilterLog.csv"));
+            assertTxtEquals(Objects.requireNonNull(getClass().getResourceAsStream("/expected/nonIgnoredEmptyFilterLog.csv")), new ByteArrayInputStream(writer.toString().getBytes(StandardCharsets.UTF_8)));
         }
     }
 
@@ -138,19 +156,19 @@ class TimeSeriesMapperTest {
                 }
             }
         };
-        mapper.mapToNetwork(store, ImmutableList.of(observer));
+        mapper.mapToNetwork(store, List.of(observer));
 
         assertEquals(1, equipmentTimeSeriesNames.size());
-        assertEquals(ImmutableList.of("equipment_ts"), equipmentTimeSeriesNames);
-        assertEquals(ImmutableList.of(network.getIdentifiable("LD2")), equipmentIds);
-        assertEquals(ImmutableList.of(1.0), equipmentValues);
-        assertEquals(ImmutableList.of("p0"), equipmentVariables);
+        assertEquals(List.of("equipment_ts"), equipmentTimeSeriesNames);
+        assertEquals(List.of(network.getIdentifiable("LD2")), equipmentIds);
+        assertEquals(List.of(1.0), equipmentValues);
+        assertEquals(List.of("p0"), equipmentVariables);
 
         assertEquals(1, otherTimeSeriesNames.size());
-        assertEquals(ImmutableList.of("other_ts"), otherTimeSeriesNames);
-        assertEquals(ImmutableList.of(network.getIdentifiable("L1")), otherIds);
-        assertEquals(ImmutableList.of(2.0), otherValues);
-        assertEquals(ImmutableList.of("otherVariable"), otherVariables);
+        assertEquals(List.of("other_ts"), otherTimeSeriesNames);
+        assertEquals(List.of(network.getIdentifiable("L1")), otherIds);
+        assertEquals(List.of(2.0), otherValues);
+        assertEquals(List.of("otherVariable"), otherVariables);
     }
 
     @Test
@@ -196,8 +214,7 @@ class TimeSeriesMapperTest {
         loader.addEquipmentMapping(MappableEquipmentType.GENERATOR, "bar", "g1", NumberDistributionKey.ONE, EquipmentVariable.TARGET_P);
 
         TimeSeriesMappingConfigTableLoader timeSeriesMappingConfigTableLoader = new TimeSeriesMappingConfigTableLoader(mappingConfig, store);
-        assertThrows(TimeSeriesMappingException.class,
-            timeSeriesMappingConfigTableLoader::checkIndexUnicity,
-            "Time series involved in the mapping must have the same index");
+        TimeSeriesException exception = assertThrows(TimeSeriesException.class, timeSeriesMappingConfigTableLoader::checkIndexUnicity);
+        assertTrue(exception.getMessage().contains("Time series involved in the mapping must have the same index"));
     }
 }
